# Slug-IG-Crawler

./: .env.example  .gitignore  Better_readme.md  CHANGELOG.md  Dockerfile  README.md  SHORTCODE_PATH_UPDATE_ANALYSIS.md  config.example.toml  config.toml  docker-compose.yml  pyproject.toml  requirements.txt  run_scraper.sh  sample_config.toml
.github/workflows/: ci.yml  publish-pypi.yml
assets/: base_config.toml
docs/: PYPI_RELEASE.md  api_reference.md  index.md  workflow.md
docs/analysis/: Better_readme.md  LOGGING_AUDIT_FIXES.md  POST_MODE_PATH_ANALYSIS.md
docs/notes/: MODE2_DELAY_AUDIT_REPORT.md  PER_POST_MAX_COMMENTS_OVERRIDE.md  README.old.md  RELEASES.md  RELEASE_NOTES_v2.1.0.md  profiles.md  selenium_usecases.md
docs/scratch/: test_comments_fetch_url.txt  test_urls_mixed_format.txt  urls_to_scrape.txt  useful_commands_for_json
scripts/: install_postgres_local.sh
src/igscraper/: __init__.py  bootstrap.py  cli.py  config.example.toml  config.py  decorator.py  logger.py  paths.py  pg_env.py  pipeline.py  postgres_setup.sql
src/igscraper/backends/: selenium_backend.py
src/igscraper/models/: common.py  registry_parser.py
src/igscraper/pages/: profile_page.py
src/igscraper/services/: enqueue_client.py  replies_expander.py  sorter.py  upload_enqueue.py
src/igscraper/tests/: test_pg_env.py  test_push_to_gcs.py  test_slug_cache.py  test_thor_worker_id.py
src/igscraper/utils/: __init__.py  video_finalizer.py
